deployment/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scorched-earth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scorched-earth
  template:
    metadata:
      labels:
        app: scorched-earth
    spec:
      terminationGracePeriodSeconds: 30
      restartPolicy: Always
      containers:
        - name: scorched-earth
          image: ghcr.io/desecho/scorched-earth:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
          livenessProbe:
            httpGet:
              path: /health/
              port: 3001
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health/
              port: 3001
            initialDelaySeconds: 5
            periodSeconds: 5
