deployment/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: scorched-earth
spec:
  type: ClusterIP
  ports:
    - port: 3001
      targetPort: 3001
  selector:
    app: scorched-earth
